_sass/_header.scss
header {
  background-image: url('/img/hero-field.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  margin-bottom: 100px;

  nav {
    padding: 25px 30px;

    & > div {
      width: 250px;

      ul {
        list-style-type: none;
        padding: 0;
        margin: 0;
        text-align: right;

        li {
          display: inline-block;
          vertical-align: middle;
          margin-left: 15px;

          a {
            color: white !important;
            font-weight: 600;
          }
        }
      }
    }
  }

  .hero {
    overflow: hidden;

    img {
      max-width: 100%;
      margin-bottom: -150px;
      margin-left: -1px;
    }

    h1 {
      max-width: 500px;
      line-height: 1.4;
      margin-top: 20px;
      margin-bottom: 20px;
    }

    p {
      color: white;
      line-height: 1.5;
      font-size: 18px;
      font-weight: 500;
      margin-bottom: 0;
      margin-top: 20px;
    }
  }
}

@media (max-width: 1130px) {
  header {
    margin-bottom: 45px; 

    .hero {
      img {
        margin-bottom: 0;
      }
    }
  }
}

@media (max-width: 880px) {
  header {
    .hero {
      text-align: center;
      padding-bottom: 15px;

      .row > div:first-child {
        display: none;

        & + div {
          width: 100%;
        }
      }

      h1 {
        max-width: 600px;
        margin: 0 auto 20px;
        padding: 0 15px;
      }

      p {
        margin-bottom: 20px;
      }
    }
  }
}

@media (max-width: 505px) {
  header {
    nav {
      & > div {
        width: auto;
      }
    }

    h1 {
      font-size: 32px;
    }
  }
}

